--- a/Code/PyTorch/GloNet+fc.ipynb
+++ b/Code/PyTorch/GloNet+fc.ipynb
@@ -70,7 +70,7 @@
         "\n",
         "class FullyConnectedWithSkip(nn.Module):\n",
         "    def __init__(self, input_dim, output_dim, hidden_dim, num_layers):\n",
-        "        super(FullyConnectedWithSkip, self).__init__()\n",
+        "        super().__init__()\n",
         "\n",
         "        self.layers = nn.ModuleList()\n",
         "        self.num_layers = num_layers\n",
@@ -204,19 +204,16 @@
         "\n",
         "class FullyConnectedWithoutSkip(nn.Module):\n",
         "    def __init__(self, input_dim, output_dim, hidden_dim, num_layers):\n",
-        "        super(FullyConnectedWithSkip, self).__init__()\n",
+        "        super().__init__()\n",
         "\n",
         "        self.layers = nn.ModuleList()\n",
         "        self.num_layers = num_layers\n",
         "\n",
-        "        # Aggiungi il primo layer\n",
         "        self.layers.append(nn.Linear(input_dim, hidden_dim))\n",
         "\n",
-        "        # Aggiungi gli hidden layers\n",
         "        for i in range(num_layers - 1):\n",
         "            self.layers.append(nn.Linear(hidden_dim, hidden_dim))\n",
         "\n",
-        "        # Aggiungi l'ultimo layer\n",
         "        self.output = nn.Linear(hidden_dim, output_dim)\n",
         "\n",
         "    def forward(self, x):\n",
@@ -232,7 +229,6 @@
         "\n",
         "        return out1\n",
         "\n",
-        "# Preparazione dei dati\n",
         "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))])\n",
         "\n",
         "trainset = torchvision.datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
@@ -241,7 +237,6 @@
         "testset = torchvision.datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
         "testloader = torch.utils.data.DataLoader(testset, batch_size=128, shuffle=False)\n",
         "\n",
-        "# Variabili per graficare\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "layers_list = [1, 2, 5, 10, 20, 30,60,120]\n",
         "accuracy_list_fc = []\n",
@@ -252,7 +247,6 @@
         "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
         "    criterion = nn.CrossEntropyLoss()\n",
         "\n",
-        "    # Addestramento\n",
         "    for epoch in range(2):\n",
         "        for i, data in enumerate(trainloader):\n",
         "            inputs, labels = data\n",
@@ -264,7 +258,6 @@
         "            loss.backward()\n",
         "            optimizer.step()\n",
         "\n",
-        "    # Test\n",
         "    correct = 0\n",
         "    total = 0\n",
         "    with torch.no_grad():\n",
@@ -280,7 +273,6 @@
         "    print(f\"Accuracy with {num_layers} layers: {accuracy}%\")\n",
         "    accuracy_list_fc.append(accuracy)\n",
         "\n",
-        "# Grafico\n",
         "plt.plot(layers_list, accuracy_list_fc)\n",
         "plt.xlabel('Number of Layers')\n",
         "plt.ylabel('Accuracy (%)')\n",
@@ -345,7 +337,7 @@
         "\n",
         "class FullyConnectedGloNet(nn.Module):\n",
         "    def __init__(self, input_dim, output_dim, hidden_dim, num_layers):\n",
-        "        super(FullyConnectedWithSkip, self).__init__()\n",
+        "        super().__init__()\n",
         "\n",
         "        self.layers = nn.ModuleList()\n",
         "        self.num_layers = num_layers\n",
@@ -373,7 +365,6 @@
         "\n",
         "        return self.output(out2)\n",
         "\n",
-        "# Preparazione dei dati\n",
         "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))])\n",
         "\n",
         "trainset = torchvision.datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
@@ -382,7 +373,6 @@
         "testset = torchvision.datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
         "testloader = torch.utils.data.DataLoader(testset, batch_size=128, shuffle=False)\n",
         "\n",
-        "# Variabili per graficare\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "layers_list = [1, 2, 5, 10, 20, 30,60,120]\n",
         "accuracy_list = []\n",
@@ -393,7 +383,6 @@
         "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
         "    criterion = nn.CrossEntropyLoss()\n",
         "\n",
-        "    # Addestramento\n",
         "    for epoch in range(2):\n",
         "        for i, data in enumerate(trainloader):\n",
         "            inputs, labels = data\n",
@@ -405,7 +394,6 @@
         "            loss.backward()\n",
         "            optimizer.step()\n",
         "\n",
-        "    # Test\n",
         "    correct = 0\n",
         "    total = 0\n",
         "    with torch.no_grad():\n",
@@ -539,7 +527,7 @@
         "\n",
         "class FullyConnectedGloNet(nn.Module):\n",
         "    def __init__(self, input_dim, output_dim, hidden_dim, num_layers):\n",
-        "        super(FullyConnectedWithSkip, self).__init__()\n",
+        "        super().__init__()\n",
         "\n",
         "        self.layers = nn.ModuleList()\n",
         "        self.num_layers = num_layers\n",
